// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/organisms/TodoFooter Basic smoke-test 1`] = `
<footer class="_footer_45a7p_1">
  <span class="_todoCount_45a7p_31">
    <strong>
      0
    </strong>
    items left
  </span>
  <ul class="_filters_45a7p_40">
    <li>
      <a class="_link_45a7p_72 _selected_45a7p_85"
         href="/"
         data-status="active"
      >
        All
      </a>
    </li>
    <li>
      <a href="/active"
         class="_link_45a7p_72"
      >
        Active
      </a>
    </li>
    <li>
      <a href="/completed"
         class="_link_45a7p_72"
      >
        Completed
      </a>
    </li>
  </ul>
  <button class="_button_z78gq_1 _clearCompleted_45a7p_59">
    Clear completed
  </button>
</footer>
`;

exports[`components/organisms/TodoFooter HasCompleted smoke-test 1`] = `
<footer class="_footer_45a7p_1">
  <span class="_todoCount_45a7p_31">
    <strong>
      1
    </strong>
    item left
  </span>
  <ul class="_filters_45a7p_40">
    <li>
      <a class="_link_45a7p_72 _selected_45a7p_85"
         href="/"
         data-status="active"
      >
        All
      </a>
    </li>
    <li>
      <a href="/active"
         class="_link_45a7p_72"
      >
        Active
      </a>
    </li>
    <li>
      <a href="/completed"
         class="_link_45a7p_72"
      >
        Completed
      </a>
    </li>
  </ul>
  <button class="_button_z78gq_1 _clearCompleted_45a7p_59">
    Clear completed
  </button>
</footer>
`;
